2018-04-28  Aurelien Jarno  <aurelien@aurel32.net>

	[BZ #23069]
	* sysdeps/unix/sysv/linux/riscv/kernel_sigaction.h: New file.

2018-03-29  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/unix/sysv/linux/i386/tst-bz21269.c (do_test): Also
	capture SIGBUS.

2018-03-23  Andrew Senkevich  <andrew.senkevich@intel.com>
	    Max Horn  <max@quendi.de>

	[BZ #22644]
	* sysdeps/i386/i686/multiarch/memcpy-sse2-unaligned.S: Fixed
	branch conditions.
	* string/test-memmove.c (do_test2): New testcase.

2018-02-22  Andrew Waterman <andrew@sifive.com>

	[BZ # 22884]
	* sysdeps/riscv/rvd/s_fmax.c (__fmax): Handle sNaNs correctly.
	* sysdeps/riscv/rvd/s_fmin.c (__fmin): Likewise.
	* sysdeps/riscv/rvf/s_fmaxf.c (__fmaxf): Likewise.
	* sysdeps/riscv/rvf/s_fminf.c (__fminf): Likewise.

2018-02-22  DJ Delorie  <dj@delorie.com>

	* sysdeps/riscv/tls-macros.h: Do not initialize $gp.

2018-03-16  Rafal Luzynski  <digitalfreak@lingonborough.com>

	[BZ #22963]
	* localedata/locales/cs_CZ (mon): Rename to...
	(alt_mon): This.
	(mon): Import from CLDR (genitive case).

2018-03-16  Rafal Luzynski  <digitalfreak@lingonborough.com>

	[BZ #22937]
	* localedata/locales/el_CY (abmon): Rename to...
	(ab_alt_mon): This.
	(abmon): Import from CLDR (abbreviated genitive case).
	* localedata/locales/el_GR (abmon): Rename to...
	(ab_alt_mon): This.
	(abmon): Import from CLDR (abbreviated genitive case).

2018-03-16  Rafal Luzynski  <digitalfreak@lingonborough.com>

	[BZ #22932]
	* localedata/locales/lt_LT (abmon): Synchronize with CLDR.

2018-03-16  Robert Buj  <robert.buj@gmail.com>

	[BZ #22848]
	* localedata/locales/ca_ES (abmon): Rename to...
	(ab_alt_mon): This, then synchronize with CLDR (nominative case).
	(mon): Rename to...
	(alt_mon): This.
	(abmon): Import from CLDR (genitive case, month names preceded by
	"de" or "d’").
	(mon): Likewise.
	(abday): Synchronize with CLDR.
	(d_t_fmt): Likewise.
	(d_fmt): Likewise.
	(am_pm): Likewise.

	(LC_TIME): Improve indentation.
	(LC_TELEPHONE): Likewise.